--- a/geometria/bin/.gitignore
+++ b/geometria/bin/.gitignore
@@ -2,3 +2,11 @@
 /FiguraGeometrica.class
 /Rectangulo.class
 /Triangulo.class
+/TrianguloMAN.class
+/RectanguloMAN.class
+/FiguraGeometricaMAN.class
+/CirculoMAN.class
+/Circulo_MAN.class
+/Triangulo_MAN.class
+/Rectangulo_MAN.class
+/FiguraGeometrica_MAN.class
